tests/sources/invalid/for_end_larger.minipl
for x in 10..1 do
print x;
end for;